--- a/google-drive.css
+++ b/google-drive.css
@@ -18,22 +18,6 @@ body{
 }
 /*************** END Google Login Box ***************/
 
-/*************** Google Drive Breadcrumb ***************/
-#drive-breadcrumb{
-	font-size:11px;
-}
-
-#drive-breadcrumb a{
-	cursor:pointer;
-}
-
-.breadcrumb-arrow{
-    background:url(images/arrow_right.png) no-repeat 0 3px;
-    display:inline-block;
-    height:16px;
-    width:11px;
-}
-/*************** END Google Drive Breadcrumb ***************/
 
 /*************** Google Drive Box ***************/
 #transparent-wrapper
@@ -70,8 +54,8 @@ body{
 .folder-box, .file-box {
     float:left;
     font-family:Arial;
-    width:150px;
-    height:150px;
+    width:220px;
+    height:190px;
     text-align:center;
     padding:10px;
     margin:10px;
@@ -84,19 +68,19 @@ body{
 
 .image-preview{
     text-align:center;
-    height:80px; 
+    height:175px; 
 }
 
 .image-preview img{
-    max-width:45%;
-	height:70%;
-	cursor:pointer;
+    padding-top:10px;
+    max-width:90%;
+    height:90%;
+    cursor:pointer;
 }
 
 .item-title {
-    padding-top:10px;
     word-wrap: break-word;
-    width:150px;
+    width:100%;
     text-align:center;
     font-size:11px;
 }
@@ -111,64 +95,11 @@ body{
 	border:solid 1px #000;
 }
 
-#button-reload, #button-share, #button-addfolder, #button-upload{
-    width:24px;
-    height:24px;
-    display:block;
-    cursor:pointer;
-    margin-right:5px;
-	float:left;
-	border:Solid 1px #fae8e4;
-	border-radius:5px;
-}
-
-#button-reload {
-    background:url(images/button_reload.png) no-repeat;
-}
-
-#button-share {
-    background:url(images/button_share.png) no-repeat;
-}
-
-#button-share.flash{
-	background-color:#dbeb2d;
-}
-
-#button-addfolder {
-    background:url(images/button_addfolder.png) no-repeat;
-}
-
-#button-upload {
-    background:url(images/button_upload.png) no-repeat;
-}
 
 .button-box{
 	padding-top:10px;
 }
 
-.button-delete, .button-info, .button-download, .button-text{
-	width:20px;
-    height:20px;
-    display:inline-block;
-    cursor:pointer;
-    margin-right:5px;
-}
-
-.button-delete {
-    background:url(images/button_delete.png) no-repeat;
-}
-
-.button-info {
-    background:url(images/button_info.png) no-repeat;
-}
-
-.button-download {
-    background:url(images/button_download.png) no-repeat;
-}
-
-.button-text {
-    background:url(images/button_text.png) no-repeat;
-}
 
 /*************** END Google Drive Box ***************/
 
@@ -413,3 +344,4 @@ body{
     100% { opacity: 1.0; }
 }
 /***************** END MISC ************************/
+
